# Sumire-Desktop

./: .gitignore  .gitmodules  BuiltInSystemLexicon.cpp  BuiltInSystemLexicon.h  CandidateList.cpp  CandidateWindow.cpp  CandidateWindow.h  CompartmentEventSink.cpp  ComposingText.h  Composition.cpp  CompositionState.cpp  CompositionState.h  ConversionTypes.h  DisplayAttribute.cpp  DisplayAttributeInfo.cpp  DisplayAttributeInfo.h  DisplayAttributeProvider.cpp  EndComposition.cpp  EnumDisplayAttributeInfo.cpp  Globals.cpp  Globals.h  ILexicon.h  InputModeState.cpp  InputModeState.h  InputScopeEvaluator.cpp  InputScopeEvaluator.h  KanaKanjiConverter.cpp  KanaKanjiConverter.h  KeyEditHandlers.cpp  KeyEventSink.cpp  KeyHandler.cpp  LICENSE  LanguageBar.cpp  LanguageBar.h  LexiconRegistry.cpp  LexiconRegistry.h  MozcSystemLexicon.cpp  MozcSystemLexicon.h  PersonNameLexicon.cpp  PersonNameLexicon.h  (+32 more)
.github/workflows/: release.yml
CandidateList/: ComposingText.h  Globals.h  README.md  Sumire.filters  Sumire.vcxproj  TextService.h
dictionaries/mozc/: tango.louds
dictionaries/names/: filtered_names.txt
docs/basic-usage/: README.md
docs/settings/: README.md
kana-kanji-conversion-c-plus-plus-main/: .gitignore  .gitmodules  CMakeLists.txt  README.md
kana-kanji-conversion-c-plus-plus-main/.github/workflows/: release-dictionaries.yml
kana-kanji-conversion-c-plus-plus-main/android/: CMakeLists.txt  kana_kanji_entry.cpp
kana-kanji-conversion-c-plus-plus-main/cli/kana_kanji/: astar_bunsetsu_cli.cpp  astar_bunsetsu_parallel_cli.cpp  astar_zenz_fuse_cli.cpp
kana-kanji-conversion-c-plus-plus-main/cli/zenz/: zenz_convert_cli.cpp
kana-kanji-conversion-c-plus-plus-main/src/dictionary_builder/louds_builder/louds/: louds_utf16_reader.cpp  louds_utf16_reader.hpp
kana-kanji-conversion-c-plus-plus-main/src/graph_builder/: graph.cpp  graph.hpp
kana-kanji-conversion-c-plus-plus-main/src/path_algorithm/: find_path.cpp  find_path.hpp
kana-kanji-conversion-c-plus-plus-main/tools/: run_ajimee_bench.py
scripts/: package-release.ps1
